[package]
name = "randua"
version = "0.1.0"
authors = ["roadup"]
edition = "2018"
description = "A random user-agent"
repository ="https://github.com/roadhub/randua.git"
readme = "./README.md"
license="./LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
